	libavogadro/src/extensions/gaussianextension.cpp, 
	libavogadro/src/extensions/propextension.cpp, 
	avogadro/src/mainwindow.ui, avogadro/src/mainwindow.cpp:
	More interface cleanup -- any menu item or button which brings up
	a dialog should have "..." at the end. (KDE, Windows, and Mac UI guidelines.)
	
2008-05-16  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/tools/aligntool.*: Added options to align everything
	or just the current molecule.

	* libavogadro/src/tools/aligntool.cpp,
	libavogadro/src/tools/autorotatetool.cpp,
	libavogadro/src/tools/bondcentrictool.cpp,
	libavogadro/src/tools/selectrotatetool.cpp: More layout improvements.

	* libavogadro/src/tools/drawtool.cpp: Layout improvements in the tool
	set up dialog.

	* libavogadro/src/extensions/gaussianinputdialog.*: Added the ability
	to edit the input deck, revert etc.

	* libavogadro/src/tools/drawtool.cpp: Added some extra signals on
	mouse release to ensure molecule is updated.

	* libavogadro/src/extensions/gaussianinputdialog.ui: Fixed the tab
	ordering of the dialog.

	* libavogadro/src/periodictableview.cpp: Some changes to improve
	layout in Linux and hopefully Windows.

	* cmake/modules/FindOpenBabel2.cmake: Hopefully a new and improved
	FindOpenBabel2 using the new PkgConfig functions.

	* CMakeLists.txt: Set the CMake policy for CMake 2.6.

2008-05-15  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* avogadro/mainwindow.h, avogadro/mainwindow.cpp: Changed engine
	configuration to a new button which brings up an extra "settings"
	window with tabs. Add signal/slot for enabling the Engine Settings
	window -- only enables button for engines with settings.

	* src/enginelistview.cpp, primitivetreeview.cpp: 
	Add setUniformItemSizes(true) -- supposedly improves performance.

2008-05-15  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/primitive.cpp, libavogadro/src/glwidget.cpp,
	libavogadro/src/engines/surfaceengine.cpp: Made some changes to the