@@ -5,9 +5,15 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>390</width>
+    <width>325</width>
     <height>235</height>
    </rect>
+  </property>
+  <property name="sizePolicy" >
+   <sizepolicy vsizetype="MinimumExpanding" hsizetype="Preferred" >
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
   </property>
   <property name="windowTitle" >
    <string>Orbitals</string>
@@ -24,10 +30,17 @@
     </widget>
    </item>
    <item row="1" column="0" >
-    <widget class="QComboBox" name="orbitalCombo" />
+    <widget class="QComboBox" name="orbitalCombo" >
+     <property name="enabled" >
+      <bool>false</bool>
+     </property>
+    </widget>
    </item>
    <item row="1" column="1" >
     <widget class="QPushButton" name="calculate" >
+     <property name="enabled" >
+      <bool>false</bool>
+     </property>
      <property name="text" >
       <string>Calculate</string>
      </property>
@@ -68,16 +81,6 @@
         </item>
        </layout>
       </item>
-      <item row="1" column="0" >
-       <widget class="QLabel" name="label_3" >
-        <property name="text" >
-         <string>Steps:</string>
-        </property>
-        <property name="buddy" >
-         <cstring>stepsX</cstring>
-        </property>
-       </widget>
-      </item>
       <item row="1" column="1" >
        <layout class="QHBoxLayout" name="horizontalLayout_2" >
         <item>
@@ -103,16 +106,6 @@
          </spacer>
         </item>
        </layout>
-      </item>
-      <item row="2" column="0" >
-       <widget class="QLabel" name="label_2" >
-        <property name="text" >
-         <string>Step SIze:</string>
-        </property>
-        <property name="buddy" >
-         <cstring>stepSize</cstring>
-        </property>
-       </widget>
       </item>
       <item row="2" column="1" >
        <layout class="QHBoxLayout" name="horizontalLayout_3" >
@@ -152,13 +145,36 @@
         <property name="orientation" >
          <enum>Qt::Vertical</enum>
         </property>
+        <property name="sizeType" >
+         <enum>QSizePolicy::MinimumExpanding</enum>
+        </property>
         <property name="sizeHint" stdset="0" >
          <size>
           <width>20</width>
-          <height>177</height>
+          <height>0</height>
          </size>
         </property>
        </spacer>
+      </item>
+      <item row="1" column="0" >
+       <widget class="QLabel" name="label_3" >
+        <property name="text" >
+         <string>Steps:</string>
+        </property>
+        <property name="buddy" >
+         <cstring>stepsX</cstring>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="0" >
+       <widget class="QLabel" name="label_2" >
+        <property name="text" >
+         <string>Step SIze:</string>
+        </property>
+        <property name="buddy" >
+         <cstring>stepSize</cstring>
+        </property>
+       </widget>
       </item>
       <item row="0" column="0" >
        <widget class="QLabel" name="label" >
@@ -171,9 +187,6 @@
        </widget>
       </item>
      </layout>
-     <zorder>label_3</zorder>
-     <zorder>label_2</zorder>
-     <zorder>label</zorder>
     </widget>
    </item>
    <item row="3" column="0" colspan="2" >
@@ -181,10 +194,13 @@
      <property name="orientation" >
       <enum>Qt::Vertical</enum>
      </property>
+     <property name="sizeType" >
+      <enum>QSizePolicy::MinimumExpanding</enum>
+     </property>
      <property name="sizeHint" stdset="0" >
       <size>
        <width>20</width>
-       <height>40</height>
+       <height>0</height>
       </size>
      </property>
     </spacer>
